# lokikit

./: .gitignore  .pre-commit-config.yaml  README.md  TASKS.md  lokikit.code-workspace  lokikit.example.yaml  pyproject.toml  pytest.ini
.cursor/rules/: cursor-rules.mdc  development-workflow.mdc  task-list.mdc
.github/workflows/: ci.yml  publish.yml
docs/: README.md  custom_labels.md  feature_suggestions.md  log_parsing.md  log_parsing_example.md  logging_best_practices.md  logging_example.py  recommended_logging.py
lokikit/: __init__.py  cli.py  commands.py  config.py  download.py  logger.py  logging.py  process.py
lokikit/utils/: __init__.py  dashboard_generator.py  job_manager.py  log_analyzer.py
tests/: __init__.py  conftest.py  test_cli.py  test_commands.py  test_config.py  test_download.py  test_kwargs_context.py  test_logging.py  test_parse.py  test_parse_command.py  test_process.py  test_utils_dashboard_generator.py
